# aws-announcements-scraper

./: .gitignore  CLEANUP_GITHUB.md  GIT_COMMAND_LINE_GUIDE.md  README.md  README_s3.md  pyproject.toml  requirements.txt  setup.py  template_cn.pptx  template_en.pptx
aws_scraper/: README.md  __init__.py  config_manager.py  content_extractor.py  data_storage.py  date_filter.py  homepage_parser.py  http_client.py  logging_config.py  main.py  models.py  requirements.txt  scraper_orchestrator.py
bak/: README_original.md
config/: aws_scraper_config.json  aws_scraper_config.yaml
