[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "aws-announcements-scraper"
version = "1.1.0"
description = "A web scraper for AWS China announcements with date filtering and multiple output formats"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Neil Li", email = "ninamz@nwcdcloud.cn"}
]
keywords = ["aws", "scraper", "web-scraping", "announcements", "china"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.2",
    "PyYAML>=6.0.1",
]

[project.scripts]
aws-scraper = "aws_scraper.main:main"

[project.urls]
Homepage = "https://github.com/neillidocker/aws-announcements-scraper"
Documentation = "https://github.com/neillidocker/aws-announcements-scraper#readme"
Repository = "https://github.com/neillidocker/aws-announcements-scraper"
Issues = "https://github.com/neillidocker/aws-announcements-scraper/issues"

[tool.setuptools]
packages = ["aws_scraper"]
